Biomass data were added

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Séries temporais de mapas"
+      name="Séries temporal de dados de biomassa"
       content="Developed by Fernando Martins Pimenta - fernando.m.pimenta@gmail.com"
     />
 
-    <title>Séries Temporais</title>
+    <title>Séries Temporais de Dados de Biomassa</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
