--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://obahia.dea.ufv.br/landuse/" />
+    <meta property="og:url" content="http://obahia.dea.ufv.br/biomass/" />
     <meta property="og:title" content="Carbon Stocks Time Series" />
     <meta
       property="og:description"
@@ -53,16 +53,16 @@
     />
     <meta property="og:image" content="http://localhost:3000/images/meta.png" />
     <!-- Twitter -->
-    <meta name="twitter:card" content="http://localhost:3000/images/meta.png" />
-    <meta name="twitter:url" content="http://obahia.dea.ufv.br/landuse/" />
-    <meta name="twitter:title" content="Carbon Stocks Time Series" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="http://obahia.dea.ufv.br/biomass/" />
+    <meta property="twitter:title" content="Carbon Stocks Time Series" />
     <meta
-      name="twitter:description"
+      property="twitter:description"
       content="Visualization and analysis of the Western Bahia Carbon Stocks
       time series at regional, basin, drainage and at municipal level."
     />
     <meta
-      name="twitter:image"
+      property="twitter:image"
       content="http://localhost:3000/images/meta.png"
     />
   </head>
